--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootNode" alignment="CENTER" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: linear-gradient(#fff 0%, #eee 10%, #ddd 90%, #bbb 100%);" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="client.MainController">
-    <HBox>
-        <TextField fx:id="tfFileName" focusTraversable="false" promptText="Укажите имя файла на сервере, который хотите скачать" HBox.hgrow="ALWAYS" />
-        <Button onAction="#pressOnDownloadBtn" text="Download" />
-        <Button onAction="#pressOnSendBtn" text="Send" />
-    </HBox>
-    <ListView fx:id="filesList" VBox.vgrow="ALWAYS" />
-    <!--<Button onAction="#pressOnSendData" text="Test Netty Send" />-->
-</VBox>
+<HBox fx:id="rootNode" alignment="CENTER" prefHeight="440.0" prefWidth="535.0" style="-fx-background-color: linear-gradient(#fff 0%, #eee 10%, #ddd 90%, #bbb 100%);" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MainController">
+    <VBox>
+        <ListView fx:id="clientFilesList" prefHeight="415.0" prefWidth="372.0" VBox.vgrow="ALWAYS" />
+    </VBox>
+    <VBox>
+        <ListView fx:id="cloudFileList" onDragOver="#onDropped" onMouseClicked="#onClicked" prefHeight="440.0" prefWidth="347.0" VBox.vgrow="ALWAYS" />
+    </VBox>
+</HBox>
